# ben0

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: assistant_behavior.md  data_schema.md  developer_setup.md  local_first_principles.md  memory-and-dossiers-design.md  product_brief.md  rag_architecture.md  sensitive_data_policy.md  synthetic_dataset.md  temporal-report-card-design.md  validation_rules.md
src/ben0/: __init__.py  cli.py  config.py  session.py
src/ben0/assistant/: __init__.py  critic.py  entity_detection.py  evidence_check.py  model_adapters.py  orchestrator.py  persona.py  prompts.py  query_router.py  text_to_sql.py  tools.py
src/ben0/compilation/: codex.py  compiler.py  prompts.py
src/ben0/dashboard/: __init__.py  app.py  metrics.py
src/ben0/db/: models.py  session.py
src/ben0/export/: __init__.py  basic_export.py
src/ben0/ingest/: csv_ingest.py  document_ingest.py  encoding.py  iris_ingest.py  normalize.py
src/ben0/interview/: __init__.py  answer_parser.py  conductor.py  data_gather.py  questions.py  session.py
src/ben0/memory/: dossier.py  tags.py
src/ben0/registry/: __init__.py  (+4 more)
tests/: test_compilation.py  test_dossier.py  test_entity_detection.py  test_evidence_check.py  test_ingest.py  test_interview.py  test_orchestrator_verification.py  test_orchestrator_wiring.py  test_phase46_smoke.py  test_phase78_smoke.py  test_registry.py  test_report_card_temporal.py  test_reports.py  test_retrieval.py  test_retrieval_r1.py  test_rules.py  test_tickets.py  test_validation.py  test_vector_search.py  test_visit_gaps.py
(+33 files in other folders)
